cmake_minimum_required(VERSION 3.28)
project(karin_examples_maximize_window)

set(CMAKE_CXX_STANDARD 20)

add_executable(karin_examples_maximize_window main.cpp)
add_dependencies(karin_examples_maximize_window karin_system)
target_link_libraries(karin_examples_maximize_window PRIVATE karin_system)
target_include_directories(karin_examples_maximize_window PRIVATE ${INCLUDE_DIR})